<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_recipe_details">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/_5dp"
        card_view:cardCornerRadius="@dimen/_5dp">

        <TextView
            android:id="@+id/tv_recipe_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_26sp"
            android:text="@string/ingredients"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_ingredient_name">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
