<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/_5dp"
        card_view:cardCornerRadius="@dimen/_5dp">

        <TextView
            android:id="@+id/tv_recipe_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_recipe_image"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_26sp"/>

    </android.support.v7.widget.CardView>


</RelativeLayout>